--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD…8/wDwoMm038/DSpUR0OXsDw77yX0NC5ClSq/ZHonSpUqQj//Z">
     <script type="text/javascript" src="./script.js">
 </script>
 
