--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD…8/wDwoMm038/DSpUR0OXsDw77yX0NC5ClSq/ZHonSpUqQj//Z">
+	<img src="https://images.pexels.com/photos/1996333/pexels-photo-1996333.jpeg?cs=srgb&dl=pexels-helena-lopes-1996333.jpg&fm=jpg">
     <script type="text/javascript" src="./script.js">
 </script>
 
